@@ -140,6 +140,36 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|SetOnce
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|SetOnce
+operator|.
+name|AlreadySetException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|Version
 import|;
 end_import
@@ -319,6 +349,45 @@ return|return
 name|WRITE_LOCK_TIMEOUT
 return|;
 block|}
+comment|// indicates whether this config instance is already attached to a writer.
+comment|// not final so that it can be cloned properly.
+DECL|field|writer
+specifier|private
+name|SetOnce
+argument_list|<
+name|IndexWriter
+argument_list|>
+name|writer
+init|=
+operator|new
+name|SetOnce
+argument_list|<
+name|IndexWriter
+argument_list|>
+argument_list|()
+decl_stmt|;
+comment|/**    * Sets the {@link IndexWriter} this config is attached to.    *     * @throws AlreadySetException    *           if this config is already attached to a writer.    */
+DECL|method|setIndexWriter
+name|IndexWriterConfig
+name|setIndexWriter
+parameter_list|(
+name|IndexWriter
+name|writer
+parameter_list|)
+block|{
+name|this
+operator|.
+name|writer
+operator|.
+name|set
+argument_list|(
+name|writer
+argument_list|)
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
 comment|/**    * Creates a new config that with defaults that match the specified    * {@link Version} as well as the default {@link    * Analyzer}. By default, {@link TieredMergePolicy} is used    * for merging;    * Note that {@link TieredMergePolicy} is free to select    * non-contiguous merges, which means docIDs may not    * remain monotonic over time.  If this is a problem you    * should switch to {@link LogByteSizeMergePolicy} or    * {@link LogDocMergePolicy}.    */
 DECL|method|IndexWriterConfig
 specifier|public
@@ -360,6 +429,15 @@ operator|.
 name|clone
 argument_list|()
 decl_stmt|;
+name|clone
+operator|.
+name|writer
+operator|=
+name|writer
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
 comment|// Mostly shallow clone, but do a deepish clone of
 comment|// certain objects that have state that cannot be shared
 comment|// across IW instances:
@@ -1391,6 +1469,8 @@ name|interval
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
 DECL|method|setUseCompoundFile
 specifier|public
 name|IndexWriterConfig
@@ -1410,6 +1490,50 @@ name|setUseCompoundFile
 argument_list|(
 name|useCompoundFile
 argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|(
+name|super
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"writer="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|writer
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|"\n"
+argument_list|)
+expr_stmt|;
+return|return
+name|sb
+operator|.
+name|toString
+argument_list|()
 return|;
 block|}
 block|}
