@@ -43,6 +43,8 @@ name|SetOnce
 parameter_list|<
 name|T
 parameter_list|>
+implements|implements
+name|Cloneable
 block|{
 comment|/** Thrown when {@link SetOnce#set(Object)} is called more than once. */
 DECL|class|AlreadySetException
@@ -168,6 +170,39 @@ parameter_list|()
 block|{
 return|return
 name|obj
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|clone
+specifier|public
+name|SetOnce
+argument_list|<
+name|T
+argument_list|>
+name|clone
+parameter_list|()
+block|{
+return|return
+name|obj
+operator|==
+literal|null
+condition|?
+operator|new
+name|SetOnce
+argument_list|<
+name|T
+argument_list|>
+argument_list|()
+else|:
+operator|new
+name|SetOnce
+argument_list|<
+name|T
+argument_list|>
+argument_list|(
+name|obj
+argument_list|)
 return|;
 block|}
 block|}
