@@ -308,6 +308,9 @@ argument_list|,
 name|dir
 argument_list|,
 name|iwc
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|iw
@@ -360,6 +363,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|iwc
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|iw
