@@ -754,6 +754,9 @@ argument_list|,
 name|dir
 argument_list|,
 name|iwc
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -1188,6 +1191,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|iwc
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|iw2
