@@ -3527,6 +3527,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -3569,6 +3572,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|doc
@@ -3666,6 +3672,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -3708,6 +3717,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|writer
@@ -4025,6 +4037,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -4078,6 +4093,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|doc
@@ -4159,6 +4177,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -4207,6 +4228,9 @@ argument_list|(
 name|dir2
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|doc
@@ -4316,6 +4340,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -4364,6 +4391,9 @@ argument_list|(
 name|dir2
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|doc
@@ -4497,6 +4527,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -4545,6 +4578,9 @@ argument_list|(
 name|dir2
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|writer
@@ -4654,6 +4690,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -4702,6 +4741,9 @@ argument_list|(
 name|dir2
 argument_list|,
 name|conf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|IndexReader
