@@ -276,6 +276,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|SetOnce
+operator|.
+name|AlreadySetException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Test
@@ -1067,7 +1083,7 @@ init|=
 name|newDirectory
 argument_list|()
 decl_stmt|;
-comment|// test that if the same IWC is reused across two IWs, it is cloned by each.
+comment|// test that IWC cannot be reused across two IWs
 name|IndexWriterConfig
 name|conf
 init|=
@@ -1078,9 +1094,6 @@ argument_list|,
 literal|null
 argument_list|)
 decl_stmt|;
-name|RandomIndexWriter
-name|iw
-init|=
 operator|new
 name|RandomIndexWriter
 argument_list|(
@@ -1091,24 +1104,85 @@ name|dir
 argument_list|,
 name|conf
 argument_list|)
-decl_stmt|;
-name|LiveIndexWriterConfig
-name|liveConf1
-init|=
-name|iw
-operator|.
-name|w
-operator|.
-name|getConfig
-argument_list|()
-decl_stmt|;
-name|iw
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|iw
+comment|// this should fail
+try|try
+block|{
+name|assertNotNull
+argument_list|(
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|,
+name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"should have hit AlreadySetException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AlreadySetException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+comment|// also cloning it won't help, after it has been used already
+try|try
+block|{
+name|assertNotNull
+argument_list|(
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|,
+name|conf
+operator|.
+name|clone
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"should have hit AlreadySetException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|AlreadySetException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+comment|// if it's cloned in advance, it should be ok
+name|conf
 operator|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
 operator|new
 name|RandomIndexWriter
 argument_list|(
@@ -1118,38 +1192,30 @@ argument_list|,
 name|dir
 argument_list|,
 name|conf
-argument_list|)
-expr_stmt|;
-name|LiveIndexWriterConfig
-name|liveConf2
-init|=
-name|iw
 operator|.
-name|w
-operator|.
-name|getConfig
+name|clone
 argument_list|()
-decl_stmt|;
-name|iw
+argument_list|)
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-comment|// LiveIndexWriterConfig's "copy" constructor doesn't clone objects.
-name|assertNotSame
+operator|new
+name|RandomIndexWriter
 argument_list|(
-literal|"IndexWriterConfig should have been cloned"
-argument_list|,
-name|liveConf1
-operator|.
-name|getMergePolicy
+name|random
 argument_list|()
 argument_list|,
-name|liveConf2
+name|dir
+argument_list|,
+name|conf
 operator|.
-name|getMergePolicy
+name|clone
 argument_list|()
 argument_list|)
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 name|dir
 operator|.
