@@ -6874,6 +6874,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|iwc
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Document
@@ -7066,6 +7069,9 @@ argument_list|(
 name|dir
 argument_list|,
 name|iwc
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|w
