@@ -3934,6 +3934,9 @@ argument_list|,
 name|dir
 argument_list|,
 name|iwConf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 decl_stmt|;
 specifier|final
@@ -4292,6 +4295,9 @@ argument_list|,
 name|dir
 argument_list|,
 name|iwConf
+operator|.
+name|clone
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
